syntax = "proto3";
package service;
option java_package = "org.qmstr.grpc.service";

import "google/protobuf/timestamp.proto";

// One of the two possible payloads
message FastenReport {

  message PackageMetadata {
    repeated string licenses = 1;
    repeated string authors = 2;
  }
  PackageMetadata package_metadata = 1;

  message FileMetadata {
    string file_name = 1;
    string sha_1 = 2;
    repeated string licenses = 3;
  }
  repeated FileMetadata file_metadata = 2;
}

// One of the two possible payloads
message FastenError {
  string name = 1;
  string message = 2;
  repeated string stacktrace = 3;
}

// Final response object
message FastenResponse {

  string plugin_name = 1;
  string plugin_version = 2;

  message FastenInput {
    string product = 1;
    string forge = 2;
    string version = 3;
  }
  FastenInput input = 3;

  google.protobuf.Timestamp created_at = 4;

  oneof payload {
    FastenReport report = 5;
    FastenError error = 6;
  }
}
